frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: expense
spec:
  selector:
    app: frontend
    tier: web
    project: expense
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
